--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -85,6 +86,9 @@
                 <h5>Que ganas de comer hamburguesas</h5>
                 <p>Hola que rico</p>
               </div>
+            </div>
+            <div class="carousel-item">
+              <img src="Imagenes/logo.gif" class="d-block w-100" alt="..." width="300" height="800">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
