--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light textoBarr">
         <div class="container-fluid">
-          <img class="navbar-brand" src="Imagenes/logoSotoBurguer.png" alt="Logo" width="160"></a>
+          <img class="navbar-brand" src="Imagenes/logoSotoBurguer.png" alt="Logo" width="100"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,7 +24,7 @@
                 <a class="nav-link active h-1" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Menú</a>
+                <a class="nav-link active" href="menu.html">Menú</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Locales</a>
@@ -42,7 +42,7 @@
       </nav>
       <br>
 
-      <header class="titulo container d-flex justify-content-left">
+      <header class="titulo container-lg d-flex justify-content-left">
         <div class="row">
           <div class="col">
             <h1 class="display-3">Soto Burguers</h1>
@@ -52,13 +52,13 @@
       </header>
 
 
-      <article class="container d-flex align-items-center justify-content-left">
+      <article class="container-lg d-flex align-items-center justify-content-left ">
         <p class="lead">
           Las mejores hamburguesas del pais
         </p>
       </article>
 
-      <article class="container">
+      <article class="container-lg">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -109,17 +109,17 @@
       <br>
 
 
-      <main class="container d-flex align-items-center justify-content-center">
+      <main class="container-lg d-flex align-items-center justify-content-center">
       <div class="row">
 
         <div class="col">
           <article>
             <div class="card text-center" style="width: 30rem;">
-              <img src="Imagenes/hamburguer.png" class="card-img-top" alt="..." width="500" height="300">
+              <img src="Imagenes/burguerWebito.jpg" class="card-img-top" alt="..." width="500" height="300">
               <div class="card-body">
-                <h5 class="card-title">Soto Burguer</h5>
-                <p class="card-text">Eskisita hamburguesa con quesito, lexuga y cebolla</p>
-                <a href="sotoburguergpt.html" class="btn btn-primary">Info</a>
+                <h5 class="card-title">Nueva EggSoto Burguer</h5>
+                <p class="card-text">Prueba nuestra nueva hamburguesa</p>
+                <a href="#" class="btn btn-primary">Info</a>
               </div>
             </div>
           </article>
@@ -130,11 +130,11 @@
         <div class="col">
           <article>
             <div class="card text-center" style="width: 30rem;">
-              <img src="Imagenes/burguerDoble.jpg" class="card-img-top" alt="..." width="500" height="300">
+              <img src="Imagenes/3x1.png" class="card-img-top" alt="..." width="500" height="300">
               <div class="card-body">
-                <h5 class="card-title">Soto Burguer Doble</h5>
-                <p class="card-text">La clásica Soto Burguer con bacon, pepinillos y salsa secreta</p>
-                <a href="#" class="btn btn-primary">Info</a>
+                <h5 class="card-title">Nueva promo Soto Burguers</h5>
+                <p class="card-text">Tres Soto Burguers por el precio de una.</p>
+                <a href="sotoburguergpt.html" class="btn btn-primary">Info</a>
               </div>
             </div>
           </article>
@@ -208,36 +208,7 @@
       </main>
 
 
-
-
       
-
-
-
-
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
