Cambio grid novedades

--- a/index.html
+++ b/index.html
@@ -110,100 +110,46 @@
 
 
       <main class="container-lg d-flex align-items-center justify-content-center">
-      <div class="row">
 
-        <div class="col">
-          <article>
-            <div class="card text-center" style="width: 30rem;">
-              <img src="Imagenes/burguerWebito.jpg" class="card-img-top" alt="..." width="500" height="300">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="card text-center">
+              <img src="Imagenes/burguerWebito.jpg" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
                 <h5 class="card-title">Nueva EggSoto Burguer</h5>
-                <p class="card-text">Prueba nuestra nueva hamburguesa</p>
-                <a href="#" class="btn btn-primary">Info</a>
+                <p class="card-text">Prueba nuestra nueva EggSoto Burguer</p>
               </div>
-            </div>
-          </article>
-        </div>
-
-        <div class="col">2</div>
-
-        <div class="col">
-          <article>
-            <div class="card text-center" style="width: 30rem;">
-              <img src="Imagenes/3x1.png" class="card-img-top" alt="..." width="500" height="300">
-              <div class="card-body">
-                <h5 class="card-title">Nueva promo Soto Burguers</h5>
-                <p class="card-text">Tres Soto Burguers por el precio de una.</p>
-                <a href="sotoburguergpt.html" class="btn btn-primary">Info</a>
-              </div>
-            </div>
-          </article>
-        </div>
-
-        <div class="col ">4</div>
-
-        <div class="col ">      
-          <article>
-          <div class="card text-center" style="width: 30rem;">
-            <img src="Imagenes/burguerWebito.jpg" class="card-img-top" alt="..." width="500" height="300">
-            <div class="card-body">
-              <h5 class="card-title">EggSoto Burguer</h5>
-              <p class="card-text">Soto Burguer con quesito, webo, lechuga, bacon y tomate</p>
-              <a href="sotoburguergpt.html" class="btn btn-primary">Info</a>
             </div>
           </div>
-        </article>
-      </div>
-
-        <div class="col ">6</div>
-        <br>
-
-        <div class="col ">
-          <article>
-            <div class="card text-center" style="width: 30rem;">
-              <img src="Imagenes/hamburguesaCnPapa.jpg" class="card-img-top" alt="..." width="500" height="300">
+          <div class="col">
+            <div class="card text-center">
+              <img src="Imagenes/3x1.png" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
-                <h5 class="card-title">Soto Burguer con Soto Fries </h5>
-                <p class="card-text">Nuestra Soto Burguer con las exquisitas Soto Fries</p>
-                <a href="#" class="btn btn-primary">Info</a>
+                <h5 class="card-title">Promo tres Soto Burguers</h5>
+                <p class="card-text">Llévate tres Soto Burguers por el precio de una</p>
               </div>
             </div>
-          </article>
-        </div>
-
-        <div class="col ">8</div>
-
-        <div class="col ">
-          <article>
-            <div class="card text-center" style="width: 30rem;">
-              <img src="Imagenes/hamburguesaTresQue.jpg" class="card-img-top" alt="..." width="500" height="300">
+          </div>
+          <div class="col">
+            <div class="card text-center">
+              <img src="Imagenes/hamburguesa.jpg" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
-                <h5 class="card-title">Soto Tres quesos</h5>
-                <p class="card-text">Eskisita hamburguesa con queso azul, queso cheddar, queso mozzarella y nuestra salsa especial</p>
-                <a href="sotoburguergpt.html" class="btn btn-primary">Info</a>
+                <h5 class="card-title">Soto Burguer</h5>
+                <p class="card-text">Hola buenos dáis</p>
               </div>
             </div>
-          </article>
-        </div>
-
-        <div class="col ">10</div>
-
-        <div class="col ">
-          <article>
-            <div class="card text-center" style="width: 30rem;">
-              <img src="Imagenes/burguerDoble.jpg" class="card-img-top" alt="..." width="500" height="300">
+          </div>
+          <div class="col">
+            <div class="card text-center">
+              <img src="Imagenes/hamburguesaCnPapa.jpg" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
-                <h5 class="card-title">Soto Burguer al hilo</h5>
-                <p class="card-text">Soto burguer con extravagantes papas al hilo y salsa BBQ</p>
-                <a href="#" class="btn btn-primary">Info</a>
+                <h5 class="card-title">Soto Burguer</h5>
+                <p class="card-text">Hola buenos días</p>
               </div>
             </div>
-          </article>
+          </div>
         </div>
 
-        <div class="col ">12</div>
-
-      </div>
 
       </main>
 
