--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link active" href="menu.html">Menú</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Locales</a>
+                <a class="nav-link active" href="Locales.html">Locales</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Nosotros</a>
