--- a/menu.html
+++ b/menu.html
@@ -28,10 +28,10 @@
                 <a class="nav-link active" href="menu.html">Menú</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Locales</a>
+                <a class="nav-link active" href="Locales.html">Locales</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Nosotros</a>
+                <a class="nav-link active" href="Nosotros.html">Nosotros</a>
               </li>
             </ul>
             <form class="d-flex">
