--- a/Nosotros.html
+++ b/Nosotros.html
@@ -42,12 +42,11 @@
       </nav>
       <br>
 
- 
+      <div>
+        <img src="Imagenes/Trabajadores.png" alt="Nosotros" width="900" height="500">
+      </div>
       
 
-
- 
-      
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
