--- a/Nosotros.html
+++ b/Nosotros.html
@@ -42,8 +42,9 @@
       </nav>
       <br>
 
-      <div>
-        <img src="Imagenes/Trabajadores.png" alt="Nosotros" width="900" height="500">
+      <div class="contenedor">
+        <img src="Imagenes/Trabajadores.png" alt="" width="900" height="500">
+        <div class="texto_encima">Nosotros</div> 
       </div>
       
 
