--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active h-1" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active h-1" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="menu.html">Menú</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="Locales.html">Locales</a>
+                <a class="nav-link active" href="#">Locales</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="Nosotros.html">Nosotros</a>
+                <a class="nav-link active" href="#">Nosotros</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -193,16 +193,16 @@
             Síguenos!
           </h6>
           <p>
-            <a href="" class="text-reset">Instagram</a>
+            <a href="#!" class="text-reset">Instagram</a>
           </p>
           <p>
-            <a href="" class="text-reset">Facebook</a>
+            <a href="#!" class="text-reset">Facebook</a>
           </p>
           <p>
-            <a href="" class="text-reset">Twitter</a>
+            <a href="#!" class="text-reset">Twitter</a>
           </p>
           <p>
-            <a href="" class="text-reset">Tik Tok</a>
+            <a href="#!" class="text-reset">Tik Tok</a>
           </p>
         </div>
 
