--- a/Nosotros.html
+++ b/Nosotros.html
@@ -42,8 +42,8 @@
       </nav>
       <br>
 
-      <div class="contenedor">
-        <img src="Imagenes/Trabajadores.png" alt="" width="1100" height="500">
+      <div class="div_img">
+        <img src="Imagenes/Trabajadores.png" alt="centrar img" width="1100" height="500">
         <div class="texto_encima">Nosotros</div> 
       </div>
 
@@ -53,19 +53,19 @@
         <br>
           <div class="col">
             <div class="card text-center">
-              <img src="Imagenes/hamburguesa.jpg" class="card-img-top" alt="..." width="300" height="300">
+              <img src="Imagenes/Local_proximamente.jpg" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
-                <h5 class="card-title">Soto Burguer</h5>
-                <p class="card-text">Hola buenos dáis</p>
+                <h5 class="card-title">Proximamente nuevos locales!!</h5>
+                <p class="card-text">Como comunidad nos gustaria expandirnos a mas areas del pais para ofrecer nuestros productos.</p>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card text-center">
-              <img src="Imagenes/hamburguesaCnPapa.jpg" class="card-img-top" alt="..." width="300" height="300">
+              <img src="Imagenes/Trabaja_con_nosotros.jpg" class="card-img-top" alt="..." width="300" height="325">
               <div class="card-body">
-                <h5 class="card-title">Soto Burguer</h5>
-                <p class="card-text">Hola buenos días</p>
+                <h5 class="card-title">Trabaja con nosotros!!</h5>
+                <p class="card-text">Conoce nuestras areas de trabajo y postula para trabajar con nosotros.</p>
               </div>
             </div>
           </div>
