--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active h-1" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link active h-1" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="menu.html">Menú</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Locales</a>
+                <a class="nav-link active" href="Locales.html">Locales</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Nosotros</a>
+                <a class="nav-link active" href="Nosotros.html">Nosotros</a>
               </li>
             </ul>
             <form class="d-flex">
