--- a/html/menu.html
+++ b/html/menu.html
@@ -25,13 +25,13 @@
                 <a class="nav-link active h-1" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="menu.html">Menú</a>
+                <a class="nav-link active" href="html/menu.html">Menú</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="Locales.html">Locales</a>
+                <a class="nav-link active" href="html/Locales.html">Locales</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="Nosotros.html">Nosotros</a>
+                <a class="nav-link active" href="html/Nosotros.html">Nosotros</a>
               </li>
             </ul>
             <form class="d-flex">
