--- a/html/menu.html
+++ b/html/menu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soto Burguers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
     <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png"/>
     
 </head>
@@ -25,13 +25,13 @@
                 <a class="nav-link active h-1" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="../html/menu.html">Menú</a>
+                <a class="nav-link active" href="menu.html">Menú</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="../html/Locales.html">Locales</a>
+                <a class="nav-link active" href="Locales.html">Locales</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="../html/Nosotros.html">Nosotros</a>
+                <a class="nav-link active" href="Nosotros.html">Nosotros</a>
               </li>
             </ul>
             <form class="d-flex">
