--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active h-1" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active h-1" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="html/menu.html">Menú</a>
@@ -33,6 +33,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="html/Nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="html/soporte.html">Soporte</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -192,7 +195,6 @@
               Suscribirse
             </button>
             
-            <!-- Modal -->
             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
