--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -32,6 +32,9 @@
               <li class="nav-item">
                 <a class="nav-link active" href="Nosotros.html">Nosotros</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="soporte.html">Soporte</a>
+              </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
