--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 <a class="nav-link active" href="html/soporte.html">Soporte</a>
               </li>
             </ul>
+
+
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -130,7 +132,7 @@
               <img src="Imagenes/burguerWebito.jpg" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
                 <h5 class="card-title">Nueva EggSoto Burguer</h5>
-                <p class="card-text">Prueba nuestra nueva EggSoto Burguer</p>
+                <p class="card-text">Prueba nuestra nueva EggSoto Burguer.</p>
               </div>
             </div>
           </div>
@@ -139,7 +141,7 @@
               <img src="Imagenes/3x1.png" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
                 <h5 class="card-title">Promo tres Soto Burguers</h5>
-                <p class="card-text">Llévate tres Soto Burguers por el precio de una</p>
+                <p class="card-text">Llévate tres Soto Burguers por el precio de una.</p>
               </div>
             </div>
           </div>
@@ -147,8 +149,8 @@
             <div class="card text-center">
               <img src="Imagenes/hamburguesa.jpg" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
-                <h5 class="card-title">Soto Burguer</h5>
-                <p class="card-text">Hola buenos dáis</p>
+                <h5 class="card-title">Menu Junaeb</h5>
+                <p class="card-text">El menu junaeb ya llego a Soto Burguer, Prueba ya!!</p>
               </div>
             </div>
           </div>
@@ -157,7 +159,7 @@
               <img src="Imagenes/hamburguesaCnPapa.jpg" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
                 <h5 class="card-title">Soto Burguer</h5>
-                <p class="card-text">Hola buenos días</p>
+                <p class="card-text">Menus mas populares.</p>
               </div>
             </div>
           </div>
