--- a/html/Locales.html
+++ b/html/Locales.html
@@ -53,7 +53,7 @@
               <div class="card text-center">
                 <img src="../Imagenes/Local_abierto_1.jpg" class="card-img-top" alt="..." width="300" height="300">
                 <div class="card-body">
-                  <h5 class="card-title">Puerto Montt-Los notros</h5>
+                  <h5 class="card-title">Puerto Montt-Los Notros</h5>
                   <p class="card-text">Los esperamos aquí </p>
                   <a href="#" class="btn btn-primary"></a>
                 </div>
