--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -46,7 +46,7 @@
       <br>
 
       <div class="div_img">
-        <img src="../Imagenes/Trabajadores.png" alt="centrar img" width="1100" height="500">
+        <img src="../Imagenes/Trabajadores.png" class="img-fluid" alt="Nosotros" width="1100" height="500">
         <div class="texto_encima">Nosotros</div> 
       </div>
 
