--- a/html/Nosotros.html
+++ b/html/Nosotros.html
@@ -121,7 +121,7 @@
                   Síguenos!
                 </h6>
                 <p>
-                  <a href="" class="text-reset">Instagram</a>
+                  <a href="https://www.instagram.com/soto__burguers/" target="_blank" class="text-reset">Instagram</a>
                 </p>
                 <p>
                   <a href="" class="text-reset">Facebook</a>
