--- a/html/stobger3qsos.html
+++ b/html/stobger3qsos.html
@@ -185,7 +185,7 @@
                                 <span class="cerrar">&times;</span>
                                 <h2 class="display-5">Soto Burguers</h2>
                                 <p>Correo registrado correctamente</p>
-                                <button id="close" class="btn btn-success cerrar">Cerrar</button>
+                                
 
                             </div>
                         </div>
@@ -235,7 +235,7 @@
     </footer>
 
 
-    <script src="javascript/funciones.js"></script>
+    <script src="../javascript/funciones.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
