--- a/html/Locales.html
+++ b/html/Locales.html
@@ -73,7 +73,7 @@
               <div class="card">
                 <img src="../Imagenes/Local_proximamente.jpg" class="card-img-top" alt="..." width="300" height="300">
                 <div class="card-body text-center">
-                  <h5 class="card-title">Proximamente</h5>
+                  <h5 class="card-title">Próximamente</h5>
                   <p class="card-text">Mall nuevo costanera center</p>
                  
                 </div>
