--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
             <div class="card text-center">
               <img src="Imagenes/hamburguesa.jpg" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
-                <h5 class="card-title">Menu Junaeb</h5>
-                <p class="card-text">El menu junaeb ya llego a Soto Burguer, Prueba ya!!</p>
+                <h5 class="card-title">Menú Junaeb</h5>
+                <p class="card-text">El menú junaeb ya llego a Soto Burguer, Prueba ya!!</p>
               </div>
             </div>
           </div>
@@ -155,7 +155,7 @@
               <img src="Imagenes/hamburguesaCnPapa.jpg" class="card-img-top" alt="..." width="300" height="300">
               <div class="card-body">
                 <h5 class="card-title">Soto Burguer</h5>
-                <p class="card-text">Menus mas populares.</p>
+                <p class="card-text">Menús mas populares.</p>
               </div>
             </div>
           </div>
