--- a/html/soporte.html
+++ b/html/soporte.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Don Luis Olavarría, Don Soto, Don Alex Barrientos">
   <title>Soto Burguers</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilo.css">
+
   <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
 
 </head>
@@ -41,7 +42,7 @@
             <a class="nav-link active" href="soporte.html">Soporte</a>
           </li>
         </ul>
-       
+
       </div>
     </div>
   </nav>
@@ -64,44 +65,62 @@
 
 
 
-    <form action="https://formsubmit.co/ale.barrientos@duocuc.cl" method="POST">
+    <section>
+      <div class="container">
+        <form action="" id="formulario_contacto">
 
-      <div class="form-floating mb-3">
-        <input class="form-control" id="floatingInput" type="text" name="name" required>
-        <label for="floatingInput">Nombre</label>
+          <label for="nombre">Nombre</label>
+          <br>
+          <input type="text" name="nombre" id="nombre" class="form-control" placeholder="Machuca">
+
+
+          <br>
+          <label for="email">Correo Electronico</label>
+          <br>
+          <input type="email" name="email" id="email" class="form-control" placeholder="luchito@mail.com">
+          <br>
+
+          <label for="tipo_documento">Tipo de Documento</label> <br>
+          <select name="tipo_documento" id="tipo_documento" class="form-control">
+            <option value="">Seleccionar</option>
+            <option value="rut">Rut</option>
+            <option value="pasaporte">Pasaporte</option>
+          </select>
+          <br>
+
+          <label for="rut">Rut</label>
+          <br>
+          <input type="text" name="rut" id="rut" class="form-control" placeholder="21.345.987-3"
+            oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1') ;">
+          <br>
+
+          <label for="telefono">Numero de telefono (opcional)</label>
+          <br>
+          <input type="number" name="telefono" id="telefono" class="form-control" placeholder="999027635">
+          <br>
+
+          <label for="ciudad">Ciudad</label> <br>
+          <select name="ciudad" id="ciudad" class="form-control">
+            <option value="">Seleccionar</option>
+            <option value="puertoMontt">Puerto Montt</option>
+            <option value="osorno">Osorno</option>
+            <option value="puertoVaras">Puerto Varas</option>
+            <option value="calbuco">Calbuco</option>
+          </select>
+          <br>
+
+          <label for="mensaje">Comentario</label>
+          <br>
+          <textarea name="mensaje" id="mesaje" cols="30" rows="10" class="form-control"
+            placeholder="Me gustaria participar en esta ONG porque..."></textarea>
+          <br>
+
+          <button type="submit" id="guardar" class="btn btn-outline-success">Guardar</button>
+          <button type="reset" class="btn btn-outline-secondary">Limpiar</button>
+          <br>
+        </form>
       </div>
-
-      <div class="form-floating mb-3">
-        <input class="form-control" id="floatingPassword" type="email" name="email" required>
-        <label for="floatingPassword">Correo electrónico</label>
-      </div>
-
-      <div class="form-floating mb-3">
-        <input class="form-control" id="floatingPassword" type="text" name="subject">
-        <label for="floatingPassword">Asunto</label>
-      </div>
-
-      <div class="form-floating">
-
-        <textarea name="comments" class="form-control" placeholder="Comentarios" id="floatingTextarea2"
-          style="height: 100px"></textarea>
-        <label for="floatingTextarea2" for="comments">Comentarios</label>
-
-      </div>
-
-
-
-
-
-
-      <br>
-      <button type="button" class="btn btn-primary">
-        <input class="btn btn-primary" type="submit" value="Enviar">
-      </button>
-
-      <input type="hidden" name="_next" value="http://127.0.0.1:5503/index.html">
-      <input type="hidden" name="_captcha" value="false">
-    </form>
+    </section>
 
 
 
@@ -146,17 +165,18 @@
               </div>
 
             </form>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="abrirModal">Suscribirse</button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+              id="abrirModal">Suscribirse</button>
 
             <div id="ventanaModal" class="modal">
               <div class="contenido-modal">
-                  <span class="cerrar">&times;</span>
-                  <h2 class="display-5">Soto Burguers</h2>
-                  <p>Correo registrado correctamente</p>
+                <span class="cerrar">&times;</span>
+                <h2 class="display-5">Soto Burguers</h2>
+                <p>Correo registrado correctamente</p>
               </div>
             </div>
-        </div>
-          
+          </div>
+
 
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
@@ -199,11 +219,26 @@
 
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
 
-    <script src="../javascript/funciones.js"></script>   
+  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+
+
+  <script src="../javascript/form_jquery.js"></script>
+
+  <script src="../javascript/funciones.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
