--- a/html/stobger.html
+++ b/html/stobger.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light textoBarr">
+    <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
             <img class="navbar-brand" src="../Imagenes/logoSotoBurguer.png" alt="Logo" width="100"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -160,7 +160,7 @@
     </main>
 
 
-    <footer class="text-center text-lg-start bg-white text-muted">
+    <footer>
 
 
         <section class="container">
@@ -194,7 +194,7 @@
                                 <span class="cerrar">&times;</span>
                                 <h2 class="display-5">Soto Burguers</h2>
                                 <p>Correo registrado correctamente</p>
-                                
+
 
                             </div>
                         </div>
