--- a/html/soporte.html
+++ b/html/soporte.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light textoBarr">
+  <nav class="navbar navbar-expand-lg navbar-light ">
     <div class="container-fluid">
       <img class="navbar-brand" src="../Imagenes/logoSotoBurguer.png" alt="Logo" width="100"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -46,7 +46,7 @@
       </div>
     </div>
   </nav>
-  <br>
+
 
   <header class="titulo container-lg d-flex justify-content-left">
     <div class="row">
@@ -54,16 +54,10 @@
         <h1 class="display-4">Soporte</h1>
       </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
   </header>
-  <br>
+
+
   <main class="container d-flex align-items-center justify-content-center">
-
-
 
     <section>
       <div class="container">
@@ -122,26 +116,11 @@
       </div>
     </section>
 
-
-
-
-
-
   </main>
 
 
-
-
-
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <footer class="text-center text-lg-start bg-white text-muted">
+  <br><br><br><br><br><br><br>
+  <footer>
 
 
     <section class="container">
