--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light ">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light "> 
     <div class="container-fluid">
       <img class="navbar-brand" src="Imagenes/logoSotoBurguer.png" alt="Logo" width="100"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
