--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light "> 
     <div class="container-fluid">
-      <img class="navbar-brand" src="Imagenes/logoSotoBurguer.png" alt="Logo" width="100"></a>
+      <img class="navbar-brand" src="Imagenes/logoSotoBurguer.png" alt="Logo" height="90" width="90"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span> 
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -47,6 +47,10 @@
       </div>
     </div>
   </nav>
+  <br>
+  <br>
+  <br> 
+  <br>
   <br>
 
   <header class="titulo container-lg d-flex justify-content-left">
