--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="css/estilo.css">
-  <link rel="icon" type="image/x-icon" href="Imagenes/logoSotoBurguer.png" />
+  <link rel="icon" type="image/x-icon" href="Imagenes/burger.png" />
 
 
 
@@ -20,7 +20,7 @@
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light "> 
     <div class="container-fluid">
-      <img class="navbar-brand" src="Imagenes/logoSotoBurguer.png" alt="Logo" height="90" width="90"></a>
+      <img class="navbar-brand" src="Imagenes/logoSotoBurguer.png" alt="Logo" height="76" width="120"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span> 
