--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light text-light"> 
     <div class="container-fluid">
-      <img class="navbar-brand" src="Imagenes/logoSotoBurguer.png" alt="Logo" height="76" width="120"></a>
+      <a class="navbar-brand" href="index.html">
+        <img src="Imagenes/burger.png" alt="logo" width="120" height="76">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span> 
@@ -274,3 +276,4 @@
 
 
 </html>
+
