--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-light text-light"> 
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="Imagenes/burger.png" alt="logo" width="120" height="76">
+        <img src="Imagenes/logoSotoBurguer.png" alt="logo" width="120" height="76">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -276,4 +276,3 @@
 
 
 </html>
-
