--- a/html/menu.html
+++ b/html/menu.html
@@ -6,19 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Don Luis Olavarría, Don Soto, Don Alex Barrientos">
-  <title>Soto Burguers</title>
+  <title>Soto Burguers </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilo.css">
   <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light ">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light text-light">
     <div class="container-fluid">
-      <img class="navbar-brand" src="../Imagenes/logoSotoBurguer.png" alt="Logo" width="100"></a>
+      <a class="navbar-brand" href="index.html">
+        <img src="../Imagenes/logoSotoBurguer.png" alt="logo" width="120" height="76">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,25 +29,35 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active h-1" aria-current="page" href="../index.html">Inicio</a>
+            <a class="nav-link active text-white " aria-current="page" href="../index.html"><i
+                class="fa-solid fa-house"></i> Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="menu.html">Menú</a>
+
+            <a class="nav-link active text-white" href="menu.html"><i class="fa-solid fa-list"></i> Menú</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="Locales.html">Locales</a>
+
+            <a class="nav-link active text-white" href="Locales.html"><i class="fa-solid fa-shop"></i> Locales</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="Nosotros.html">Nosotros</a>
+
+            <a class="nav-link active text-white" href="Nosotros.html"><i class="fa-solid fa-user-group"></i>
+              Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="soporte.html">Soporte</a>
+
+            <a class="nav-link active text-white" href="soporte.html"><i class="fa-solid fa-comments"></i> Soporte</a>
           </li>
         </ul>
 
       </div>
     </div>
   </nav>
+  <br>
+  <br>
+  <br>
+  <br>
   <br>
 
   <header class="titulo container d-flex justify-content-left">
