--- a/html/stobgerhilo.html
+++ b/html/stobgerhilo.html
@@ -11,15 +11,18 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
 
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light ">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light text-light">
         <div class="container-fluid">
-            <img class="navbar-brand" src="../Imagenes/logoSotoBurguer.png" alt="Logo" width="100"></a>
+            <a class="navbar-brand" href="index.html">
+                <img src="../Imagenes/logoSotoBurguer.png" alt="logo" width="120" height="76">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -28,25 +31,38 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active h-1" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link active text-white " aria-current="page" href="../index.html"><i
+                                class="fa-solid fa-house"></i> Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="menu.html">Menú</a>
+
+                        <a class="nav-link active text-white" href="menu.html"><i class="fa-solid fa-list"></i> Menú</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="Locales.html">Locales</a>
+
+                        <a class="nav-link active text-white" href="Locales.html"><i class="fa-solid fa-shop"></i>
+                            Locales</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="Nosotros.html">Nosotros</a>
+
+                        <a class="nav-link active text-white" href="Nosotros.html"><i
+                                class="fa-solid fa-user-group"></i> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="soporte.html">Soporte</a>
+
+                        <a class="nav-link active text-white" href="soporte.html"><i class="fa-solid fa-comments"></i>
+                            Soporte</a>
                     </li>
                 </ul>
 
             </div>
         </div>
     </nav>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <header class="container-lg d-flex align-items-center justify-content-left">
         <div class="row row-cols-1 row-cols-md-2 g-2">
