--- a/html/Locales.html
+++ b/html/Locales.html
@@ -67,6 +67,9 @@
   <br>
   <br>
   <br>
+  
+  <div id="divmap">  
+  </div>
 
 
   <main class="container d-flex align-items-center justify-content-center">
@@ -194,6 +197,8 @@
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
   <script src="../javascript/funciones.js"></script>
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC57BFnmP48fmwco17eGA1Bt8fiypP0Vo4&callback=initMap">
+  </script>
 </body>
 
 </html>
