cambio de fuentes y botocitos de colores ugu

--- a/html/menu.html
+++ b/html/menu.html
@@ -81,7 +81,7 @@
           <div class="card-body">
             <h5 class="card-title">Soto Burguer</h5>
             <p class="card-text">Exquisita hamburguesa con queso, lechuga, cebolla y pan casero</p>
-            <a href="stobger.html" class="btn btn-primary">Ver más...</a>
+            <a href="stobger.html" class="btn btn-warning">Ver más...</a>
           </div>
         </div>
       </div>
@@ -92,7 +92,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Soto Burguer doble</h5>
             <p class="card-text">Soto Burguer con bacon, pepinillos, salsa secreta y doble hamburguesa</p>
-            <a href="stobger2.html" class="btn btn-primary">Ver más...</a>
+            <a href="stobger2.html" class="btn btn-warning">Ver más...</a>
           </div>
         </div>
       </div>
@@ -103,7 +103,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">EggSoto Burguer</h5>
             <p class="card-text">Soto Burguer con quesito, webo, lechuga, bacon y tomate</p>
-            <a href="stobgeregg.html" class="btn btn-primary">Ver más...</a>
+            <a href="stobgeregg.html" class="btn btn-warning">Ver más...</a>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Soto Burguer con Soto Fries</h5>
             <p class="card-text">Nuestra clásica Soto Burguer con las exquisitas Soto Fries</p>
-            <a href="stobgerfries.html" class="btn btn-primary">Ver más...</a>
+            <a href="stobgerfries.html" class="btn btn-warning">Ver más...</a>
           </div>
         </div>
       </div>
@@ -125,7 +125,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Soto tres quesos</h5>
             <p class="card-text">Nuestra clásica Soto Burguer con las exquisitas Soto Fries</p>
-            <a href="stobger3qsos.html" class="btn btn-primary">Ver más...</a>
+            <a href="stobger3qsos.html" class="btn btn-warning">Ver más...</a>
           </div>
         </div>
       </div>
@@ -136,7 +136,7 @@
           <div class="card-body text-center">
             <h5 class="card-title">Soto Burguer al hilo</h5>
             <p class="card-text">Soto burguer con extravagantes papas al hilo y salsa BBQ</p>
-            <a href="stobgerhilo.html" class="btn btn-primary">Ver más...</a>
+            <a href="stobgerhilo.html" class="btn btn-warning">Ver más...</a>
           </div>
         </div>
       </div>
@@ -170,7 +170,7 @@
 
               </div>
 
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+              <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
                 id="abrirModal">Suscribirse</button>
 
               <div id="ventanaModal" class="modal">
