--- a/html/stobger.html
+++ b/html/stobger.html
@@ -70,7 +70,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-2">
             <div class="col">
                 <br>
-                <a class="btn btn-primary" href="menu.html" role="button">Volver</a>
+                <a class="btn btn-warning" href="menu.html" role="button">Volver</a>
             </div>
         </div>
     </header>
@@ -202,7 +202,7 @@
                             </div>
                         </form>
 
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-warning" data-bs-toggle="modal"
                             data-bs-target="#staticBackdrop" id="abrirModal">Suscribirse</button>
 
                         <div id="ventanaModal" class="modal">
