--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="css/estilo.css">
   <link rel="icon" type="image/x-icon" href="Imagenes/logoSotoBurguer.png" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
 
 </head>
 
@@ -213,7 +216,7 @@
               </div>
             </form>
 
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+            <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
               id="abrirModal">Suscribirse</button>
 
             <div id="ventanaModal" class="modal">
