--- a/html/Login.html
+++ b/html/Login.html
@@ -64,6 +64,8 @@
         </div>
       </nav>
 
+      <br>
+
 
     <div class="containerPrincipal">
         <h1 class="h-1 ashe1">Inicio de sesión</h1>
@@ -72,8 +74,10 @@
             <input id="contraseña" type="password" class="form-control" name="password" placeholder="Contraseña">
             <br>
             <button id="boton" class="boton" onclick="login()">Iniciar Sesion </button>
+            <br>
+            <a class="restContra" href="#">Olvidé mi contraseña</a>
         </div>
-    </div>
+    </div>  
 
     <footer>
 
