--- a/html/soporte.html
+++ b/html/soporte.html
@@ -12,13 +12,13 @@
   <link rel="stylesheet" href="../css/estilo.css">
 
   <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
-<<<<<<< HEAD
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-=======
+
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
->>>>>>> 673b138dbf1f0aed7730232562489f4c6e9c616e
+
 
 </head>
 
@@ -53,7 +53,6 @@
               Nosotros</a>
           </li>
           <li class="nav-item">
-
             <a class="nav-link active text-white" href="soporte.html"><i class="fa-solid fa-comments"></i> Soporte</a>
           </li>
           <li class="nav-item">
@@ -70,15 +69,7 @@
   <br>
   <br>
 
-
-  <header class="titulo container-lg d-flex justify-content-left">
-    <div class="row">
-      <div class="col">
-        <h1 class="display-4">Soporte</h1>
-      </div>
-    </div>
-  </header>
-
+  <h1 class="titulo_soporte" > Soporte</h1>
 
   <main class="container d-flex align-items-center justify-content-center">
 
