--- a/html/Locales.html
+++ b/html/Locales.html
@@ -20,7 +20,7 @@
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light text-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="../index.html">
         <img src="../Imagenes/logoSotoBurguer.png" alt="logo" width="120" height="76">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
