--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
   </nav><br><br><br>
   <header>
-    <img src="Imagenes/SotoBurguerFont.png" alt="">
+    <img src="Imagenes/image.png" alt="">
   </header>
 
   <article class="container-sm">
