--- a/html/Locales.html
+++ b/html/Locales.html
@@ -19,27 +19,27 @@
 <body>
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light text-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">
-        <img src="../Imagenes/logoSotoBurguer.png" alt="logo" width="120" height="76">
-      </a>
+    <div class="container-fluid ">
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active text-white " aria-current="page" href="../index.html"><i
-                class="fa-solid fa-house"></i> Inicio</a>
-          </li>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+        <ul class="nav justify-content-center">
+
           <li class="nav-item">
 
             <a class="nav-link active text-white" href="menu.html"><i class="fa-solid fa-list"></i> Menú</a>
           </li>
           <li class="nav-item">
 
-            <a class="nav-link active text-white" href="Locales.html"><i class="fa-solid fa-shop"></i> Locales</a>
+            <a class="nav-link active text-white" href="'Locales.html"><i class="fa-solid fa-shop"></i> Locales</a>
+          </li>
+          <li class="nav-item">
+            <a class="navbar-brand" href="../index.html">
+              <img src="../Imagenes/burger.png" alt="logo" width="70" height="46">
+            </a>
           </li>
           <li class="nav-item">
 
@@ -48,12 +48,9 @@
           </li>
           <li class="nav-item">
 
-            <a class="nav-link active text-white" href="soporte.html"><i class="fa-solid fa-comments"></i> Soporte</a>
+            <a class="nav-link active text-white" href="soporte.html"><i class="fa-solid fa-comments"></i>
+              Soporte</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="Login.html" > <i class="fa-solid fa-user"></i>Cuenta </a>
-        </li>
-        </ul>
 
       </div>
     </div>
