--- a/html/soporte.html
+++ b/html/soporte.html
@@ -25,27 +25,27 @@
 <body>
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-light text-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">
-        <img src="../Imagenes/logoSotoBurguer.png" alt="logo" width="120" height="76">
-      </a>
+    <div class="container-fluid ">
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active text-white " aria-current="page" href="../index.html"><i
-                class="fa-solid fa-house"></i> Inicio</a>
-          </li>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+        <ul class="nav justify-content-center">
+
           <li class="nav-item">
 
             <a class="nav-link active text-white" href="menu.html"><i class="fa-solid fa-list"></i> Menú</a>
           </li>
           <li class="nav-item">
 
-            <a class="nav-link active text-white" href="Locales.html"><i class="fa-solid fa-shop"></i> Locales</a>
+            <a class="nav-link active text-white" href="'Locales.html"><i class="fa-solid fa-shop"></i> Locales</a>
+          </li>
+          <li class="nav-item">
+            <a class="navbar-brand" href="../index.html">
+              <img src="../Imagenes/burger.png" alt="logo" width="70" height="46">
+            </a>
           </li>
           <li class="nav-item">
 
@@ -53,20 +53,16 @@
               Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-white" href="soporte.html"><i class="fa-solid fa-comments"></i> Soporte</a>
+
+            <a class="nav-link active text-white" href="soporte.html"><i class="fa-solid fa-comments"></i>
+              Soporte</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="Login.html" > <i class="fa-solid fa-user"></i>Cuenta </a>
-        </li>
-        </ul>
 
       </div>
     </div>
   </nav>
  <br>
- <br>
- <br>
-  <br>
+  
 
 
 
@@ -89,23 +85,13 @@
           <input type="email" name="email" id="email" class="form-control" placeholder="luchito@mail.com">
           <br>
 
-          <label for="tipo_documento">Tipo de Documento</label> <br>
-          <select name="tipo_documento" id="tipo_documento" class="form-control">
+          <label for="tipo_mensaje">Tipo de Mensaje</label> <br>
+          <select name="tipo_mensaje" id="tipo_mensaje" class="form-control">
             <option value="">Seleccionar</option>
-            <option value="rut">Rut</option>
-            <option value="pasaporte">Pasaporte</option>
+            <option value="reclamo">Reclamo</option>
+            <option value="sugerencia">Sugerencia</option>
+            <option value="felicitacion">Felicitacion</option>
           </select>
-          <br>
-
-          <label for="rut">Rut</label>
-          <br>
-          <input type="text" name="rut" id="rut" class="form-control" placeholder="21.345.987-3"
-            oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1') ;">
-          <br>
-
-          <label for="telefono">Numero de telefono (opcional)</label>
-          <br>
-          <input type="number" name="telefono" id="telefono" class="form-control" placeholder="999027635">
           <br>
 
           <label for="ciudad">Ciudad</label> <br>
@@ -121,7 +107,7 @@
           <label for="mensaje">Comentario</label>
           <br>
           <textarea name="mensaje" id="mesaje" cols="30" rows="10" class="form-control"
-            placeholder="Me gustaria participar en esta ONG porque..."></textarea>
+            placeholder="Aqui va el Mensaje..."></textarea>
           <br>
 
           <button type="submit" id="guardar" class="btn btn-outline-success">Guardar</button>
