--- a/html/Locales.html
+++ b/html/Locales.html
@@ -6,13 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Don Luis Olavarría, Don Soto, Don Alex Barrientos">
-  <title>Soto Burguers</title>
+  <title>Soto Burguers </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilo.css">
+
   <link rel="icon" type="image/x-icon" href="../Imagenes/logoSotoBurguer.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
 
 </head>
 
@@ -34,7 +40,7 @@
           </li>
           <li class="nav-item">
 
-            <a class="nav-link active text-white" href="'Locales.html"><i class="fa-solid fa-shop"></i> Locales</a>
+            <a class="nav-link active text-white" href="Locales.html"><i class="fa-solid fa-shop"></i> Locales</a>
           </li>
           <li class="nav-item">
             <a class="navbar-brand" href="../index.html">
@@ -61,14 +67,14 @@
   <br>
   <br>
 
-  
+
   <h1 class="titulo_locales">Como llegar</h1>
   <div id="divmap">
   </div>
 
   <br>
   <br>
-  
+
 
 
   <main class="container d-flex align-items-center justify-content-center">
@@ -125,28 +131,35 @@
 
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 
+            <div id="alertRojo" class="alert alert-danger" role="alert">
+              El correo ingresesado es no es válido
+            </div>
+
+            <div id="alertVerde" class="alert alert-success" role="alert">
+              Correo ingresado correctamente
+            </div>
+
             <h6 class="text-uppercase fw-bold mb-4">
-              Quieres ser el primero en enterarte de nustras nuevas hamburguesas y promos?
+              ¿Quieres ser el primero en enterarte de nuestras nuevas hamburguesas y promos?
             </h6>
-            <p>Suscríbete a nuestro Newsletter:</p>
+            <p>Suscríbete a nuestro Newsletter</p>
 
             <form>
               <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Ingrese su correo: </label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <label for="correo" class="form-label">Ingrese su correo: </label>
+                <input type="email" class="form-control" id="correo" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">Nunca compartiremos tu correo</div>
+                <input type="button" class="btn btn-warning" value="Suscribirse"
+                  onclick="validarCorreo(document.getElementById('correo').value)">
 
               </div>
             </form>
-
-            <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
-              id="abrirModal">Suscribirse</button>
 
             <div id="ventanaModal" class="modal">
               <div class="contenido-modal">
                 <span class="cerrar">&times;</span>
                 <h2 class="display-5">Soto Burguers</h2>
-                <p>Correo registrado correctamente</p>
+                <p>se ha suscrito correctamente</p>
               </div>
             </div>
 
@@ -191,13 +204,21 @@
       <a class="text-reset fw-bold" href="index.html">www.SotoBurguers.com</a>
     </div>
 
-  </footer>
+    <a class="ir-arriba" javascript:void(0) title="Volver arriba">
+      <span class="fa-stack">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-arrow-up fa-stack-1x fa-inverse"></i>
+      </span>
+    </a>
 
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+    integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
   <script src="../javascript/funciones.js"></script>
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC57BFnmP48fmwco17eGA1Bt8fiypP0Vo4&callback=initMap">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC57BFnmP48fmwco17eGA1Bt8fiypP0Vo4&callback=initMap">
   </script>
 </body>
 
