THE FINAL SOTO BURGUER COMMIT !!!!

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
           <li class="nav-item">
 
+
+
+
             <a class="nav-link active text-white" href="html/menu.html"><i class="fa-solid fa-list"></i> Menú</a>
           </li>
           <li class="nav-item">
@@ -45,7 +48,7 @@
           </li>
           <li class="nav-item">
             <a class="navbar-brand" href="#">
-              <img src="Imagenes/burger.png" alt="logo" width="70" height="46">
+              <img src="Imagenes/burger.png" id="amburgesa" alt="logo" width="70" height="46" onpo>
             </a>
           </li>
           <li class="nav-item">
